--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-G-GPLSR0XL7H
+<html>
+    <head>
+        <title>Login with GitHub</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" href="github.png">
+        <link rel="stylesheet" href="index.css">
+        <script src="//unpkg.com/@ungap/custom-elements/es.js"></script>
+        <script src="index.js" type="module"></script>
+        <script defer async src="https://www.googletagmanager.com/gtag/js?id=G-GPLSR0XL7H"></script>
+    </head>
+    <body is="sw-provider">
+        <header>
+            <img src="github.png">
+            <h1>Login with GitHub</h1>
+        </header>
+        <main>
+            <sw-login></sw-login>
+            <sw-logout></sw-logout>
+        </main>
+        <footer>
+            <h6><a href="https://siliconwat.com">Silicon Wat</a> &copy; 2023</h6>
+        </footer>
+    </body>
+</html>
